--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,25 @@
   background-color: #edf1f4;
   padding: 10px;
 }
-.footer {
-   background-color: #333
+.map-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+}
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+}
+footer {
+   background-color: #333;
+}
+footer a {
+  color: #bfc0c1;
+}
+footer a:hover {
+  color: #ff827b;
 }
